# BLE_IMU_location

./: README.md
aod_locator/: aod_locator1.code-workspace  readme.txt
aod_locator/app/bluetooth/common_host/aoa_angle/: aoa_angle.c  aoa_angle_config.h
aod_locator/app/bluetooth/common_host/aoa_config/default/: aoa_config.c  aoa_config.h
aod_locator/app/bluetooth/common_host/aoa_util/: aoa_parse.c  aoa_serdes.c  aoa_serdes.h
aod_locator/app/bluetooth/common_host/app_log/config/: app_log_config.h
aod_locator/app/bluetooth/common_host/mqtt/: mqtt.h
aod_locator/app/bluetooth/component_host/: mqtt.mk  ncp_host_nothread.mk  rtl_lib.mk  targets.mk  toolchain.mk
aod_locator/app/bluetooth/example_host/: readme.txt
aod_locator/app/bluetooth/example_host/aoa_locator/: app.c  app.h  app_config.h  app_conn.c  app_conn_less.c  app_silabs.c  conn.c  conn.h  endToGeograph.h  kalman.c  kalman.h  kalman2D.c  kalman2D.h  main.c  makefile  my_udp.c  my_udp.h  nedToGeograph.c  nlos.c  nlos.h
aod_locator/app/bluetooth/example_host/aoa_locator/mpu9250/: CMakeLists.txt  toolchain.cmake
aod_locator/app/bluetooth/example_host/aoa_locator/mpu9250/inc/: driver_mpu9250_interface.h  gpio.h  iic.h  mpu_init.h  mutex.h  spi.h
aod_locator/app/bluetooth/example_host/aoa_locator/mpu9250/lib/usr/local/lib/: libgpiod.la
aod_locator/app/bluetooth/example_host/aoa_locator/mpu9250/lib/usr/local/lib/pkgconfig/: libgpiod.pc
aod_locator/app/bluetooth/example_host/aoa_locator/mpu9250/src/: driver_mpu9250.c  driver_mpu9250_interface.c  gpio.c  iic.c  mpu_init.c  readme.md
(+1 files in other folders)
